# essentia-plugins

./: .clang-format  .env  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  DeveloperGuide.md  README.md
.vscode.example/: c_cpp_properties.json  extensions.json  launch.json  settings.json  tasks.json
examples/Audio2Midi/JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
examples/Audio2Midi/Source/: PluginEditor.h  PluginProcessor.cpp
peaks/: 100475__iluppai__saxophone-weep.wav.reapeaks  707236__arseniiv__stereo-noise-from-detergent-foam-sparkling.flac.reapeaks
plugins/Audio2Midi/: Audio2Midi.jucer  CMakeLists.txt
plugins/Audio2Midi/Source/: PluginProcessor.h
plugins/Audio2Midi/include/Audio2Midi/: PluginEditor.h  PluginProcessor.h
plugins/Audio2Midi/src/: PluginEditor.cpp  PluginProcessor.cpp
plugins/Audio2Midi_projucer/: Audio2Midi.jucer
plugins/Audio2Midi_projucer/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/Energy/: CMakeLists.txt
plugins/Energy/include/Energy/: PluginEditor.h  PluginProcessor.h
plugins/Energy/src/: PluginEditor.cpp  PluginProcessor.cpp
plugins/RMS/: CMakeLists.txt  RMS.jucer
plugins/RMS/Source/: PluginEditor.cpp
plugins/RMS/include/RMS/: PluginEditor.h  PluginProcessor.h
plugins/RMS/src/: PluginEditor.cpp  PluginProcessor.cpp
plugins/RMS_projucer/: RMS.jucer
plugins/RMS_projucer/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/ZeroCrossing/: CMakeLists.txt
plugins/ZeroCrossing/include/ZeroCrossing/: PluginEditor.h  PluginProcessor.h
plugins/ZeroCrossing/src/: PluginEditor.cpp  PluginProcessor.cpp
plugins/ZeroCrossingRate/: CMakeLists.txt
plugins/ZeroCrossingRate/include/ZeroCrossingRate/: PluginEditor.h  PluginProcessor.h
plugins/ZeroCrossingRate/src/: PluginEditor.cpp  PluginProcessor.cpp
plugins/energy/: CMakeLists.txt
plugins/essentia-flatness_projucer/: essentia-flatness.jucer
plugins/essentia-flatness_projucer/Source/: PluginEditor.cpp  PluginProcessor.cpp  PluginProcessor.h
scripts/: build-essentia-audio2midi-osx.sh  build-essentia-osx.sh  build-external.sh
templates/cmake/: README.md
templates/cmake/MyPlugin/: CMakeLists.txt
templates/cmake/MyPlugin/include/Audio2Midi/: PluginProcessor.h
templates/cmake/MyPlugin/include/MyPlugin/: PluginEditor.h
templates/cmake/MyPlugin/src/: PluginProcessor.cpp
templates/projucer/: vst-template.jucer
templates/projucer/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
vst-template/: vst-template.jucer
vst-template/JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
vst-template/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
